# webGPU-renderer

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  flake.nix
files/: flake.nix
lib64/: libvulkan.so.1.3.283
lib64/cmake/Dawn/: DawnTargets-release.cmake  DawnTargets.cmake
src/: main.cpp
